<b>Version 1.3.0:</b><br/><br/>
    &#8226; TweetMarker support<br/>
    &#8226; TwitLonger support<br/>
    &#8226; Upload with TwitPic<br/>
    &#8226; Much better handling of user searches<br/>
    &#8226; Added share and quote button to the in-line expansions on tweets<br/>
    &38226; Add color to the retweet and favorite buttons so you can better distinguish your actions on a tweet<br/>
    &#8226; Live streamed tweets will be automatically loaded when you are at the top of the timeline<br/>
    &#8226; Higher quality Instagram, TwitPic, and Imgur pictures<br/>
    &#8226; Remove retweets by long pressing the retweet button<br/>
    &#8226; Don't show youtube in pictures timeline<br/>
    &#8226; Better feedback for when you retweet or favorite a status<br/>
    &#8226; Better support for auto-trimming the databases<br/>
    &#8226; Added size 30 font<br/>
    &#8226; Better handling of retweets when viewing the tweet<br/>
    &#8226; Reply to your own tweets<br/>
    &#8226; Hopefully much more stability<br/>
    &#8226; Updated translations<br/>
<br/><br/>

<b>Version 1.2.0 Beta 3:</b><br/><br/>
    &#8226; More saving position on timeline<br/>
    &#8226; Fix for 24 hour clock<br/>
    &#8226; Fixed refresh on startup<br/>
    &#8226; Pull to refresh on search<br/>
    &#8226; Pull to refresh on lists<br/>
    &#8226; Issues with direct message and mentions notifications replaying<br/>
<br/><br/>

<b>Version 1.20 Beta 2:</b><br/><br/>
    &#8226; Real URL's on profiles<br/>
    &#8226; Fixed 7 in tablet mode<br/>
    &#8226; Custom notification sound<br/>
    &#8226; Huge cleanup of settings<br/>
    &#8226; See user's location when viewing a tweet (if it is provided)<br/>
    &#8226; Changed the way that composing is done in-line. Now opens the compose window. Sorry but this is the way it will have to work.<br/>
    &#8226; Attempted some fixes for uploading large images<br/>
    &#8226; More jumping fixes on the timeline<br/>